have eventbusimpl precompute which event types are for deletion