@@ -2,10 +2,12 @@ package se.aourell.httpfeeds.example;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 public class HttpFeedController {
@@ -18,7 +20,11 @@ public class HttpFeedController {
   }
 
   @GetMapping(value = "/feed/{feedName}", produces = {"application/cloudevents-batch+json", "application/json"})
-  public List<CloudEvent> getFeedItems(@PathVariable String feedName, @RequestParam(name = "lastEventId", required = false) String lastEventId, @RequestParam(name = "timeout", required = false) Long timeoutMillis) {
+  public List<CloudEvent> getFeedItems(
+    @PathVariable String feedName,
+    @RequestParam(name = "lastEventId", required = false) String lastEventId,
+    @RequestParam(name = "timeout", required = false) Long timeoutMillis
+  ) {
     log.debug("GET feed {} with lastEventId {}", feedName, lastEventId);
 
     final var feedFetcher = feedRegistry.getDefinedFeed(feedName)
@@ -32,7 +38,9 @@ public class HttpFeedController {
       items = feedFetcher.fetchWithPolling(lastEventId, timeoutMillis);
     }
 
-    final List<CloudEvent> cloudEvents = items.stream().map(CloudEventMapper::toCloudEvent).collect(Collectors.toList());
+    final List<CloudEvent> cloudEvents = items.stream()
+      .map(CloudEventMapper::toCloudEvent)
+      .toList();
 
     log.debug("GET feed with lastEventId {} returned {} events", lastEventId, cloudEvents.size());
     return cloudEvents;
